# macdeployqt-patched

./: CMakeLists.txt
